[project]
name = "financial-data-api"
version = "1.0.0"
description = "Financial Data API built with FastAPI that provides mock financial data endpoints"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[project.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 5000"
